# DataForge

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
data/02_pgns/: 20251220_113229.pgn  20251221_163636.pgn  20251222_175044.pgn  20260207_151220.pgn  20260207_191956.pgn  20260210_133816.pgn  20260210_204201.pgn
data/04_quite_labelled/: Quite Labelled_20251101_233319.csv  Quite Labelled_20251102_221211.csv  Quite Labelled_20251220_112445.csv  Quite Labelled_20251221_105310.csv  Quite Labelled_20251221_162147.csv
src/dataforge/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/dataforge/pipelines/create_training_data/: features.py  nodes.py  pipeline.py  sampling.py
src/dataforge/pipelines/pgn_to_fen_with_wdl/: nodes.py  pipeline.py  qsearch.py
src/dataforge/pipelines/selfplay/: nodes.py  pipeline.py  self_play.py
